# Unified_Parser

./: LICENSE  README.md  common copy  common.json  common.map  commonjsoner.py  example.py  extract_words.py  globals.py  helperfunctions.py  helpers.py  mistakes  parallelparser.py  parser.py  rag_pho  reorder.py  run_parser_all_lang_all_opt.py  tdl  temp  temp.py  tester.py  timer.py  times.out  unified.l  unified.y  uparser.py  wordpronunciationsyldict
GeneratedDifferences/: hindi_v2.4.txt  lexicon.cls_assamese  lexicon.cls_ben  lexicon.cls_bodo  lexicon.cls_guj  lexicon.cls_hi  lexicon.cls_kan  lexicon.cls_manipuri  lexicon.cls_ml  lexicon.cls_mr  lexicon.cls_raj  lexicon.cls_ta  lexicon.cls_telugu
Original/: lexicon.cls_bodo  lexicon.cls_kan  lexicon.cls_manipuri  lexicon.cls_raj
OriginalDifferences/: hindi_new.txt  lexicon.cls_assamese  lexicon.cls_ben  lexicon.cls_bodo  lexicon.cls_guj  lexicon.cls_hi  lexicon.cls_kan  lexicon.cls_manipuri  lexicon.cls_ml  lexicon.cls_mr  lexicon.cls_raj  lexicon.cls_ta  lexicon.cls_telugu
Words/: assam.words  assamese.words  ben.words  bodo.words  guj.words  hi.words  kan.words  mal.words  manipuri.words  ml.words  mr.words  odia.words  raj.words  rajasthani.words
dict/: english.dict_old
pypi_package/: README.md  pyproject.toml
pypi_package/src/indic-unified-parser/: globals.py  helpers.py
pypi_package/src/indic_unified_parser/: helpers.py  uparser.py
pypi_package/src/indic_unified_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypi_package/src/indic_unified_parser/ply/: lex.py
rules/: hindi.rules  (+1 more)
(+9 files in other folders)
